@@ -45,21 +45,21 @@ except ImportError:
 #  - SHA1 sum of package
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-12287-p1.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-12324.tgz',
      'xapian-core.tgz',
-     '60636419ae96d071860eed59d5e100eb66b01d85',
+     'ac246a50656869b6ea5b50d2c932477c98aaa539',
      '',
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-12287.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-12324.tgz',
      'xapian-bindings.tgz',
-     'd529598fac845fac7f7c1e164201ed82398c3eec',
+     '67c73be7808c689d2761e3ba176edd0605c1041c',
      '',
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-12287.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-12324.tgz',
      'win32msvc.tgz',
-     'a8c08a641639adc2c5c1467ea75c5057758e072c',
+     'badb435d583ffcc4806c133dce4daad2e8dff3c0',
      'xapian-core/win32',
     ),
     ('Xapian extras',
