@@ -1,3 +1,8 @@
+Wed Apr 01 11:07:25 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* libs/get_xapian.py,utils/make_xappy_tarballs: Update with new
+	  branchpoints and tarballs.
+
 Fri Mar 27 13:41:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* libs/get_xapian.py: Update xapian-extras packages.
